Update main to adhere to coding standard
Relevant documentation found here:
https://se-education.org/guides/conventions/java/basic.html