@@ -35,82 +35,80 @@ public class Duke {
                 DukeCommand cmd = DukeCommand.getCommand(s);
                 String arg;
                 switch (cmd) {
-                    case BYE:
-                        Duke.respond("Bye. Hope to see you again soon!");
-                        stopProgram = true;
+                case BYE:
+                    Duke.respond("Bye. Hope to see you again soon!");
+                    stopProgram = true;
+                    break;
+                case LIST:
+                    Duke.respondList(userData);
+                    break;
+                case DONE:
+                    arg = DukeCommand.getArgument(s);
+                    Duke.processDone(arg, userData);
+                    break;
+                case DELETE:
+                    arg = DukeCommand.getArgument(s);
+                    Duke.processDelete(arg, userData);
                         break;
-                    case LIST:
-                        Duke.respondList(userData);
-                        break;
-                    case DONE:
-                        arg = DukeCommand.getArgument(s);
-                        Duke.processDone(arg, userData);
-                        break;
-                    case DELETE:
-                        arg = DukeCommand.getArgument(s);
-                        Duke.processDelete(arg, userData);
-                        break;
-                    case TODO:
-                        arg = DukeCommand.getArgument(s);
-                        Duke.processTodo(arg, userData);
-                        break;
-                    case DEADLINE:
-                        arg = DukeCommand.getArgument(s);
-                        Duke.processDeadline(arg, userData);
-                        break;
-                    case EVENT:
-                        arg = DukeCommand.getArgument(s);
-                        Duke.processEvent(arg, userData);
-                        break;
+                case TODO:
+                    arg = DukeCommand.getArgument(s);
+                    Duke.processTodo(arg, userData);
+                    break;
+                case DEADLINE:
+                    arg = DukeCommand.getArgument(s);
+                    Duke.processDeadline(arg, userData);
+                    break;
+                case EVENT:
+                    arg = DukeCommand.getArgument(s);
+                    Duke.processEvent(arg, userData);
+                    break;
                 }
-            } catch (DukeException e) {
-                Duke.respond(e.toString());
-            } catch (IOException e) {
+            } catch (DukeException | IOException e) {
                 Duke.respond(e.toString());
             }
         }
     }
 
-    private static void processDone(String s, ArrayList<Task> tasklist) throws DukeExceptionIllegalArgument {
+    private static void processDone(String s, ArrayList<Task> taskList) throws DukeExceptionIllegalArgument {
         int idx;
         try {
             idx = Integer.parseInt(s) - 1;
         } catch (Exception e) {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! The integer cannot be parsed.");
         }
-        if (tasklist.size() <= idx || idx < 0) {
+        if (taskList.size() <= idx || idx < 0) {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! The task number must be a valid task.");
         }
-        Task t = tasklist.get(idx);
+        Task t = taskList.get(idx);
         t.setDone();
         Duke.respondDone(t);
     }
 
-    private static void processDelete(String s, ArrayList<Task> tasklist) throws DukeExceptionIllegalArgument {
+    private static void processDelete(String s, ArrayList<Task> taskList) throws DukeExceptionIllegalArgument {
         int idx;
         try {
             idx = Integer.parseInt(s) - 1;
         } catch (Exception e) {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! The integer cannot be parsed.");
         }
-        if (tasklist.size() <= idx || idx < 0) {
+        if (taskList.size() <= idx || idx < 0) {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! The task number must be a valid task.");
         }
-        Task t = tasklist.get(idx);
-        tasklist.remove(idx);
-        Duke.respondDelete(t, tasklist);
+        Task t = taskList.get(idx);
+        taskList.remove(idx);
+        Duke.respondDelete(t, taskList);
     }
 
-    private static void processTodo(String s, ArrayList<Task> tasklist) throws DukeExceptionIllegalArgument {
+    private static void processTodo(String s, ArrayList<Task> taskList) throws DukeExceptionIllegalArgument {
         if (s.equals("")) {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! The description of a todo cannot be empty.");
         }
         Task t = new ToDo(s);
-        tasklist.add(t);
-        Duke.respondAdd(t, tasklist);
+        taskList.add(t);
+        Duke.respondAdd(t, taskList);
     }
 
-    private static void processDeadline(String s, ArrayList<Task> tasklist) throws DukeExceptionIllegalArgument {
+    private static void processDeadline(String s, ArrayList<Task> taskList) throws DukeExceptionIllegalArgument {
         if (s.equals("")) {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! The description of a deadline cannot be empty.");
         }
@@ -122,11 +120,11 @@ public class Duke {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! A deadline must have a due date.");
         }
         Task t = new Deadline(tokens[0], tokens[1]);
-        tasklist.add(t);
-        Duke.respondAdd(t, tasklist);
+        taskList.add(t);
+        Duke.respondAdd(t, taskList);
     }
 
-    private static void processEvent(String s, ArrayList<Task> tasklist) throws DukeExceptionIllegalArgument {
+    private static void processEvent(String s, ArrayList<Task> taskList) throws DukeExceptionIllegalArgument {
         if (s.equals("")) {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! The description of an event cannot be empty.");
         }
@@ -138,8 +136,8 @@ public class Duke {
             throw new DukeExceptionIllegalArgument("☹ OOPS!!! An event must have a time.");
         }
         Task t = new Event(tokens[0], tokens[1]);
-        tasklist.add(t);
-        Duke.respondAdd(t, tasklist);
+        taskList.add(t);
+        Duke.respondAdd(t, taskList);
     }
 
     private static void respondDone(Task t) {
@@ -149,28 +147,28 @@ public class Duke {
         Duke.respond(lines);
     }
 
-    private static void respondList(ArrayList<Task> tasklist) {
+    private static void respondList(ArrayList<Task> taskList) {
         ArrayList<String> lines = new ArrayList<>();
-        for (int i = 0; i < tasklist.size(); i++) {
-            Task t = tasklist.get(i);
+        for (int i = 0; i < taskList.size(); i++) {
+            Task t = taskList.get(i);
             lines.add((i+1) + "." + t);
         }
         Duke.respond("Here are the tasks in your list:", lines);
     }
 
-    private static void respondDelete(Task t, ArrayList<Task> tasklist) {
+    private static void respondDelete(Task t, ArrayList<Task> taskList) {
         Duke.respond(
                 "Noted. I've removed this task:",
-                Arrays.asList(new String[]{"  "+String.valueOf(t)}),
-                "Now you have " + tasklist.size() + " tasks in the list."
+                List.of("  " + t),
+                "Now you have " + taskList.size() + " tasks in the list."
         );
     }
 
-    private static void respondAdd(Task t, ArrayList<Task> tasklist) {
+    private static void respondAdd(Task t, ArrayList<Task> taskList) {
         Duke.respond(
                 "Got it. I've added this task:",
-                Arrays.asList(new String[]{"  "+String.valueOf(t)}),
-                "Now you have " + tasklist.size() + " tasks in the list.");
+                List.of("  " + t),
+                "Now you have " + taskList.size() + " tasks in the list.");
     }
 
     // General method
@@ -203,7 +201,7 @@ public class Duke {
         Duke.respond(line, new ArrayList<>());
     }
 
-    private static void respond(String lines[]) {
+    private static void respond(String[] lines) {
         Duke.respond("", Arrays.asList(lines));
     }
 
